; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vt/hw/vga/extr_vt_vga.c_vga_setpixel.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vt/hw/vga/extr_vt_vga.c_vga_setpixel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vt_device = type { i32 }

@VDF_TEXTMODE = common dso_local global i32 0, align 4
@VT_VGA_WIDTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vt_device*, i32, i32, i32)* @vga_setpixel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vga_setpixel(%struct.vt_device* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.vt_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.vt_device* %0, %struct.vt_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.vt_device*, %struct.vt_device** %5, align 8
  %10 = getelementptr inbounds %struct.vt_device, %struct.vt_device* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @VDF_TEXTMODE, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  br label %30

16:                                               ; preds = %4
  %17 = load %struct.vt_device*, %struct.vt_device** %5, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @VT_VGA_WIDTH, align 4
  %20 = mul nsw i32 %18, %19
  %21 = sdiv i32 %20, 8
  %22 = load i32, i32* %6, align 4
  %23 = sdiv i32 %22, 8
  %24 = add nsw i32 %21, %23
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %6, align 4
  %27 = srem i32 %26, 8
  %28 = ashr i32 128, %27
  %29 = call i32 @vga_bitblt_put(%struct.vt_device* %17, i32 %24, i32 %25, i32 %28)
  br label %30

30:                                               ; preds = %16, %15
  ret void
}

declare dso_local i32 @vga_bitblt_put(%struct.vt_device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
